<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextFirstOperand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:hint="@string/edit_text_first_operand_hint"
        android:inputType="numberDecimal|numberSigned" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextFirstOperand"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addition"
            android:text="@string/button_addition_text" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="subtraction"
            android:text="@string/button_subtraction_text" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="multiply"
            android:text="@string/button_multiply_text" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="divide"
            android:text="@string/button_divide_text" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextSecondOperand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttons"
        android:layout_marginTop="20dp"
        android:hint="@string/edit_text_second_operand_hint"
        android:inputType="numberDecimal|numberSigned" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSecondOperand"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/text_view_result_text" />

    <EditText
        android:id="@+id/editTextResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewResult"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:hint="@string/edit_text_result_hint" />
</RelativeLayout>
